# resources/views/dashboard/reservationpdf.blade.php
@@ -92,17 +92,16 @@
                     <h1>FORMULARIO DE RESERVA</h1>
                 </td>
                 <td style="width: 40%; text-align: right;">
-                    <h4 style="margin-right: 3rem">FECHA: 04-oct-2024</h4>
+                    <h4 style="margin-right: 3rem">FECHA: </h4>
                 </td>
                 <td style="width: 10%; text-align: center;">
                     <img src="{{asset('images/kwlogo.png')}}" style="width: 55px;height: auto;" alt="logokw">
-
                 </td>
             </tr>
         </table>
     </header>
-    <section>
-        <p style="margin-bottom: 1rem;">
+    <section class="min-h-[300px]">
+        {{-- <p style="margin-bottom: 1rem;">
             La entidad comercial KMG INTERNATIONAL, SRL, organizada y existente de conformidad con las leyes de la
             República Dominicana, provista del Registro
             Nacional de Contribuyentes No. 132-78471-5, con su domicilio social establecido en la Calle Benito Moncion
@@ -120,46 +119,46 @@
             EL CLIENTE entrega la cantidad de DOS MIL DÓLARES (USD$ 2000), en depósito, transferencia o cheque Banco
             Popular Dominicano N°832884779, por concepto
             de RESERVA de la unidad del proyecto SAIKO Business & Corporate Center, ubicado en ...
-        </p>
+        </p> --}}
     </section>
     <h1 class="bg-primary txt-center" style="padding: .5rem 0px"> PLAN DE PAGO </h1>
     <section>
         <table class="table-pago">
             <tr>
                 <th>NOMBRE DEL PROYECTO:</th>
-                <td>SAIKO BUSINESS & CORPORATE CENTER</td>
+                <td>{{$nombre_proyecto}} </td>
             </tr>
             <tr>
                 <th>DESCRIPCIÓN DEL PRODUCTO:</th>
-                <td>LOCAL COMERCIAL</td>
+                <td>{{$descripcion}}</td>
             </tr>
             <tr>
                 <th>METROS ² CONSTRUCCIÓN:</th>
-                <td>40MTS</td>
+                <td>{{$metros_construccion}}</td>
             </tr>
             <tr>
                 <th>METROS ² SOLAR: </th>
-                <td></td>
+                <td>{{$metros_solar}} </td>
             </tr>
             <tr>
                 <th>PISO</th>
-                <td></td>
+                <td>{{$piso}} </td>
             </tr>
             <tr>
                 <th>MODULO</th>
-                <td></td>
+                <td>{{$modulo}} </td>
             </tr>
             <tr>
                 <th>PARQUEO:</th>
-                <td></td>
+                <td>{{$parqueo}} </td>
             </tr>
             <tr>
                 <th>MANTENIMIENTO:</th>
-                <td></td>
+                <td>{{$mantenimiento}} </td>
             </tr>
             <tr>
                 <th>FECHA ENTREGA:</th>
-                <td></td>
+                <td>{{$fecha_entrega}} </td>
             </tr>
         </table>
     </section>
@@ -169,32 +168,32 @@
             <tr>
                 <td>VALOR DE LA PROPIEDAD</td>
                 <td style="background-color: #ccccff;">A</td>
-                <td>7000000</td>
+                <td>{{$valor_propiedad}}</td>
                 <td>A: Monto total</td>
             </tr>
             <tr>
                 <td>RESERVA</td>
                 <td style="background-color: #99ccff;">B</td>
-                <td>20000</td>
+                <td>{{$reserva}}</td>
                 <td>B: Monto de la reserva USD 2000</td>
             </tr>
             <tr>
                 <td>INICIAL</td>
                 <td style="background-color: #33cccc">C</td>
-                <td>20000</td>
-                <td>C: 15% del Saldo - reserva = 15% x (A-B)</td>
+                <td>{{$inicial}}</td>
+                <td>C: {{$porcentaje_saldo}}% del Saldo - reserva = {{$porcentaje_saldo}}% x (A-B)</td>
             </tr>
             <tr>
                 <td>MONTO DE LA CUOTA MENSUAL</td>
                 <td style="background-color: #333399; color:white">D</td>
-                <td>RD $ 105.000</td>
-                <td>D: 30% del Monto total, se paga en 20 cuotas iguales</td>
+                <td>{{$monto_cuota_mensual}}</td>
+                <td>D: {{$porcentaje_monto}}% del Monto total, se paga en {{$numero_cuotas}} cuotas iguales</td>
             </tr>
             <tr>
                 <td>CONTRA ENTREGA</td>
                 <td style="background-color: #333399; color:white">E</td>
-                <td>RD $ 3.850.000</td>
-                <td>E: El monto a pagar es = A - B - C - (D x 20)</td>
+                <td>{{$contra_entrega}} </td>
+                <td>E: El monto a pagar es = A - B - C - (D x {{$numero_cuotas}})</td>
             </tr>
         </table>
     </section>
@@ -202,7 +201,7 @@
         <br>
     </div>
     <section>
-        <table>
+        <table class="table-pago">
             <thead>
                 <tr>
                     <th>Nro. Cuota</th>
@@ -211,11 +210,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>105.000,00$</td>
-                    <td>4/11/2024</td>
-                </tr>
+                @foreach ($lista_cuotas as $cuota)
+                    <tr>
+                        <td>{{$cuota->numero}}</td>
+                        <td>{{$cuota->monto}}</td>
+                        <td>{{$cuota->fecha}}</td>
+                    </tr>                    
+                @endforeach
             </tbody>
         </table>
     </section>
@@ -223,22 +224,22 @@
         <br>
     </div>
     <section>
-        <table>
+        <table class="table-pago">
             <tr>
                 <td>CONTRA ENTREGA: </td>
-                <td>$3.850.000,00 </td>
+                <td> {{$contra_entrega}} </td>
             </tr>
             <tr>
                 <td>ASESOR INMOBILIARIO:</td>
-                <td></td>
+                <td>{{$asesor}}</td>
             </tr>
             <tr>
                 <td>CLIENTE: </td>
-                <td>JOHN DOE </td>
+                <td>{{$cliente}}</td>
             </tr>
             <tr>
                 <td>FECHA ENVÍO PLAN DE PAGO: </td>
-                <td></td>
+                <td>{{$fecha_envio_plan_pago}} </td>
             </tr>
         </table>
     </section>
